# KicktippAi

./: .gitignore  .gitmodules  .ignore  AGENTS.md  AUTO-REVIEW.md  CLAUDE.md  Create-KicktippSample.ps1  Create-KpiDocument.ps1  Create-TransfersDocument.ps1  Directory.Packages.props  Encrypt-Fixture.ps1  Generate-CoverageReport.ps1  Get-CoverageDetails.ps1  KicktippAi.sln.DotSettings  KicktippAi.slnx  LICENSE  README.md  coverage.settings.json  pyproject.toml
.codex/: config.toml
.config/: dotnet-tools.json
.github/: SETUP.md  dependabot.yml
.github/copilot/: AGENTS.md
.github/instructions/: dotnet-api-usage.instructions.md  dotnet-usage.instructions.md  dotnet.instructions.md  firebase-adapter.instructions.md  github-repos.instructions.md  kicktipp-integration-tests.instructions.md  manual-testing.instructions.md  openai-dotnet-usage.instructions.md  openai-integration-tests.instructions.md  orchestrator.instructions.md  project-style-guide-editing.instructions.md  prompt-dev.instructions.md  spectre-console.instructions.md  structured-output.instructions.md  test-coverage.instructions.md  (+4 more)
agent-files/: langfuse-agent-tooling.md  submodule-tree.txt
community-rules/: README.md  ehonda-dev-wm26-knockout.md  ehonda-test-buli.md  pes-squad.md  rabetrabauken2026.md  schadensfresse.md
cost-command-configurations/: README.md
docs/: automation.md  estimated-costs-feature.md  finished-preparation.md  langfuse.md  orchestrator-test-plan.md
prompts/: README.md
src/: project_style_guide.md
tests/: project_style_guide.md  tunit_vs_nunit.md  tunit_vs_xunit.md
(+1016 files in other folders)
